--- a/MachinePredictiveMaintenance-Classification.ipynb
+++ b/MachinePredictiveMaintenance-Classification.ipynb
@@ -1073,11 +1073,12 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "YY7DMRbyYPbd"
-      },
+      "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "with open(\"scaler.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(scaler, f)"
+      ]
     }
   ],
   "metadata": {
@@ -1090,7 +1091,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.13.5"
     }
   },
